@@ -198,14 +198,15 @@ class TransactionReceipt:
         return hash(self.txid)
 
     def __getattr__(self, attr):
-        if attr not in ('events', 'return_value', 'revert_msg', 'trace'):
+        if attr not in ('events', 'return_value', 'revert_msg', 'trace', '_trace'):
             raise AttributeError(
                 "'TransactionReceipt' object has no attribute '{}'".format(attr)
             )
         if self.status == -1:
             return None
-        self._get_trace()
-        if self.trace:
+        if self._trace is None:
+            self._get_trace()
+        if attr == "trace":
             self._evaluate_trace()
         return self.__dict__[attr]
 
@@ -240,19 +241,13 @@ class TransactionReceipt:
             print()
 
     def _get_trace(self):
-        '''Retrieves the stack trace via debug_traceTransaction, and adds the
-        following attributes to each step:
-
-        address: The address executing this contract.
-        contractName: The name of the contract.
-        fn: The name of the function.
-        source: Start and end offset associated source code.
-        jumpDepth: Number of jumps made since entering this contract. The
-                   initial value is 1.'''
-        self.trace = []
+        '''Retrieves the stack trace via debug_traceTransaction, and finds the
+        return value, revert message and event logs in the trace.'''
         self.return_value = None
         self.revert_msg = None
+        self._trace = []
         if (self.input == "0x" and self.gas_used == 21000) or self.contract_address:
+            self.trace = []
             return
         trace = web3.providers[0].make_request(
             'debug_traceTransaction',
@@ -260,7 +255,59 @@ class TransactionReceipt:
         )
         if 'error' in trace:
             raise ValueError(trace['error']['message'])
-        self.trace = trace = trace['result']['structLogs']
+        self._trace = trace = trace['result']['structLogs']
+        if self.status:
+            # get return value
+            log = trace[-1]
+            if log['op'] != "RETURN":
+                return
+            c = contract.find_contract(self.receiver or self.contract_address)
+            if not c:
+                return
+            abi = [
+                i['type'] for i in
+                getattr(c, self.fn_name.split('.')[-1]).abi['outputs']
+            ]
+            offset = int(log['stack'][-1], 16) * 2
+            length = int(log['stack'][-2], 16) * 2
+            data = HexBytes("".join(log['memory'])[offset:offset+length])
+            self.return_value = eth_abi.decode_abi(abi, data)
+            if not self.return_value:
+                return
+            if len(self.return_value) == 1:
+                self.return_value = format_output(self.return_value[0])
+            else:
+                self.return_value = KwargTuple(
+                    self.return_value,
+                    getattr(c, self.fn_name.split('.')[-1]).abi
+                )
+        else:
+            self.events = []
+            # get revert message
+            memory = trace[-1]['memory']
+            try:
+                # 08c379a0 is the bytes4 signature of Error(string)
+                idx = memory.index(next(i for i in memory if i[:8] == "08c379a0"))
+                data = HexBytes("".join(memory[idx:])[8:]+"00000000")
+                self.revert_msg = eth_abi.decode_abi(["string"], data)[0].decode()
+            except StopIteration:
+                pass
+            try:
+                # get events from trace
+                self.events = eth_event.decode_trace(trace, topics())
+            except:
+                pass
+
+    def _evaluate_trace(self):
+        '''Adds the following attributes to each step of the stack trace:
+
+        address: The address executing this contract.
+        contractName: The name of the contract.
+        fn: The name of the function.
+        source: Start and end offset associated source code.
+        jumpDepth: Number of jumps made since entering this contract. The
+                   initial value is 1.'''
+        self.trace = trace = self._trace
         c = contract.find_contract(self.receiver or self.contract_address)
         last = {0: {
             'address': self.receiver or self.contract_address,
@@ -290,7 +337,7 @@ class TransactionReceipt:
                 last[trace[i]['depth']] = {
                     'address': address,
                     'contract': c._name,
-                    'fn': [next(k for k, v in c.signatures.items() if v == sig)],
+                    'fn': [next((k for k, v in c.signatures.items() if v == sig), "")],
                     }
             trace[i].update({
                 'address': last[trace[i]['depth']]['address'],
@@ -316,51 +363,6 @@ class TransactionReceipt:
             # jump 'o' is coming out of an internal function
             elif pc['jump'] == "o" and len(last[trace[i]['depth']]['fn']) > 1:
                 last[trace[i]['depth']]['fn'].pop()
-
-    def _evaluate_trace(self):
-        '''Retrieves the return value, revert message and event lots from
-        a stack trace.'''
-        if self.status:
-            # get return value
-            log = self.trace[-1]
-            if log['op'] != "RETURN":
-                return
-            c = contract.find_contract(self.receiver or self.contract_address)
-            if not c:
-                return
-            abi = [
-                i['type'] for i in
-                getattr(c, self.fn_name.split('.')[-1]).abi['outputs']
-            ]
-            offset = int(log['stack'][-1], 16) * 2
-            length = int(log['stack'][-2], 16) * 2
-            data = HexBytes("".join(log['memory'])[offset:offset+length])
-            self.return_value = eth_abi.decode_abi(abi, data)
-            if not self.return_value:
-                return
-            if len(self.return_value) == 1:
-                self.return_value = format_output(self.return_value[0])
-            else:
-                self.return_value = KwargTuple(
-                    self.return_value,
-                    getattr(c, self.fn_name.split('.')[-1]).abi
-                )
-        else:
-            self.events = []
-            # get revert message
-            memory = self.trace[-1]['memory']
-            try:
-                # 08c379a0 is the bytes4 signature of Error(string)
-                idx = memory.index(next(i for i in memory if i[:8] == "08c379a0"))
-                data = HexBytes("".join(memory[idx:])[8:]+"00000000")
-                self.revert_msg = eth_abi.decode_abi(["string"], data)[0].decode()
-            except StopIteration:
-                pass
-            try:
-                # get events from trace
-                self.events = eth_event.decode_trace(self.trace, topics())
-            except:
-                pass
 
     def call_trace(self):
         '''Displays the sequence of contracts and functions called while
@@ -394,8 +396,8 @@ class TransactionReceipt:
                 continue
             span = (self.trace[idx]['source']['start'], self.trace[idx]['source']['stop'])
             source = open(self.trace[idx]['source']['filename'], encoding="utf-8").read()
-            if source[span[0]][:8] in ("contract","library "):
-                idx-=1
+            if source[span[0]][:8] in ("contract", "library "):
+                idx -= 1
                 continue
             newlines = [i for i in range(len(source)) if source[i] == "\n"]
             try:
