@@ -4,6 +4,7 @@
  - check.true and check.false require booleans to pass
  - Allow subfolders within tests/
  - Only run specific tests within a file
+ - Only modify transaction stack trace if required (speeds up return_value checks)
 
 0.9.4
 -----
